--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpaceX</title>
+    <title>SPACE WALK</title>
     <STyle>
  body {
             margin: 0;
@@ -98,7 +98,7 @@
 </head>
 <body>
  
-     <a href="#">
+      <a href="Spacelite.html">
         <span></span>
         <span></span>
         <span></span>
