--- a/Spacelite.html
+++ b/Spacelite.html
@@ -36,10 +36,10 @@
         <section class="cdn">
             <div class="social">
                 <div class="icon">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-whatsapp"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="facebook.com"><i class="fa fa-facebook"></i></a>
+                    <a href="https://instagram.com/imankitkumar619"><i class="fa fa-instagram"></i></a>
+                    <a href="https://web.whatsapp.com/"><i class="fa fa-whatsapp"></i></a>
+                    <a href="https://twitter.com/?lang=en"><i class="fa fa-twitter"></i></a>
                 </div>
             </div>
             <div class="mid contain">
@@ -146,19 +146,19 @@
             <div>
                 <h1>About us</h1>
                 <ul>
-                    <li><a href="#">Email</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Others</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="https://www.google.com/account/about/">Email</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/FAQ">FAQ</a></li>
+                    <li><a href="https://www.nasa.gov/feature/goddard/2019/nasas-parker-solar-probe-sheds-new-light-on-the-sun">Others</a></li>
+                    <li><a href="https://instagram.com/imankitkumar619"">Contact us</a></li>
                 </ul>
             </div>
             <div class="comp">
             <h1>Companies</h1>
             <ul>
-                <li><a href="#">Carrer</a></li>
-                <li><a href="#">Blogs</a></li>
-                <li><a href="#">Policy</a></li>
-                <li><a href="#">Legal</a></li>
+                <li><a href="https://www.isro.gov.in/">Carrer</a></li>
+                <li><a href="https://instagram.com/imankitkumar619">Blogs</a></li>
+                <li><a href="https://www.isro.gov.in/privacy-policy">Policy</a></li>
+                <li><a href="https://www.isro.gov.in/frequently-asked-questions">Legal</a></li>
             </ul>
         </div>
         </div>
