--- a/Spacelite.html
+++ b/Spacelite.html
@@ -44,7 +44,7 @@
             </div>
             <div class="mid contain">
                 <div class="left">
-                    <h1>Space Exploration Technologies crop. tranding as Solor System,is private Indian aerospace manufacturing headquatered Jaipur. </h1>
+                    <h1>For eons, humanity has dreamt of exploring the cosmos. Almost 75 years ago, we finally achieved that dream.  </h1>
                     <button class="bt btn">Explore Space</button>
                 </div>
                 <div class="animat">
