--- a/gallary.html
+++ b/gallary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Walk | GAllary</title>
+    <title>Space Walk | Gallery</title>
 </head>
 <style>
     *{
@@ -272,9 +272,9 @@ footer span{
             <div class="right">
                  <div class="home">
                     <a href="SpaceWalk.html">Space</a>
-                    <a href="#">Gallary</a>
+                    <a href="#">Gallery</a>
                     <a href="Satellites.html">Missions</a>
-                    <a href="night.html">‎Constellations</a>
+                    <a href="night.html">Constellations</a>
                  </div>
                  <div class="search">
            <div>
@@ -341,7 +341,7 @@ footer span{
         <div class="comp">
             <h1>Companies</h1>
             <ul>
-                <li><a href="#">Carrer</a></li>
+                <li><a href="#">Career</a></li>
                 <li><a href="#">Blogs</a></li>
                 <li><a href="#">Policy</a></li>
                 <li><a href="#">Legal</a></li>
