--- a/SpaceWalk.html
+++ b/SpaceWalk.html
@@ -247,7 +247,7 @@ footer span{
             <div class="right">
                  <div class="home">
                     <a href="#">Space</a>
-                    <a href="gallary.html">Gallary</a>
+                    <a href="gallary.html">Gallery</a>
                     <a href="Satellites.html">Missions</a>
                     <a href="night.html">‎Constellations</a>
                  </div>
@@ -289,7 +289,7 @@ footer span{
         <div class="comp">
             <h1>Companies</h1>
             <ul>
-                <li><a href="#">Carrer</a></li>
+                <li><a href="#">Career</a></li>
                 <li><a href="#">Blogs</a></li>
                 <li><a href="#">Policy</a></li>
                 <li><a href="#">Legal</a></li>
