--- a/night.html
+++ b/night.html
@@ -272,7 +272,7 @@ footer span{
             <div class="right">
                  <div class="home">
                     <a href="SpaceWalk.html">Space</a>
-                    <a href="gallary.html">Gallary</a>
+                    <a href="gallary.html">Gallery</a>
                     <a href="Satellites.html">Missions</a>
                     <a href="#">‎Constellations</a>
                  </div>
@@ -335,7 +335,7 @@ footer span{
         <div class="comp">
             <h1>Companies</h1>
             <ul>
-                <li><a href="#">Carrer</a></li>
+                <li><a href="#">Career</a></li>
                 <li><a href="#">Blogs</a></li>
                 <li><a href="#">Policy</a></li>
                 <li><a href="#">Legal</a></li>
