--- a/Satellites.html
+++ b/Satellites.html
@@ -296,7 +296,7 @@ footer span{
             <div class="right">
                  <div class="home">
                     <a href="SpaceWalk.html">Space</a>
-                     <a href="gallary.html">Gallary</a>
+                     <a href="gallary.html">Gallery</a>
                      <a href="#">Missions</a>
                      <a href="night.html">‎Constellations</a>
                  </div>
@@ -361,7 +361,7 @@ footer span{
             <div class="comp">
             <h1>Companies</h1>
             <ul>
-                <li><a href="#">Carrer</a></li>
+                <li><a href="#">Career</a></li>
                 <li><a href="#">Blogs</a></li>
                 <li><a href="#">Policy</a></li>
                 <li><a href="#">Legal</a></li>
