--- a/Spacelite.html
+++ b/Spacelite.html
@@ -21,7 +21,7 @@
             <div class="right">
                  <div class="home">
                      <a href="SpaceWalk.html">Space</a>
-                     <a href="gallary.html">Gallary</a>
+                     <a href="gallary.html">Gallery</a>
                      <a href="Satellites.html">Missions</a>
                      <a href="night.html">‎Constellations</a>
                  </div>
@@ -155,7 +155,7 @@
             <div class="comp">
             <h1>Companies</h1>
             <ul>
-                <li><a href="https://www.isro.gov.in/">Carrer</a></li>
+                <li><a href="https://www.isro.gov.in/">Career</a></li>
                 <li><a href="https://instagram.com/imankitkumar619">Blogs</a></li>
                 <li><a href="https://www.isro.gov.in/privacy-policy">Policy</a></li>
                 <li><a href="https://www.isro.gov.in/frequently-asked-questions">Legal</a></li>
